# pyunigram

./: .gitignore  README.md  compare.py  eda.py  hf_unigram_tokenizer.json  hf_vs_sp.py  pyproject.toml  sp_unigram.model  sp_unigram.vocab  t.py  toprompt.py  vis.py
demo/: train.py  train_english.py  utils.py
minunigram/: __init__.py  lattice.py  model.py  tokenizer.py  train.py
models/: swift_100.json  swift_150.json  swift_400.json  swift_500.json
py_unigram/: model.py  pretokenize.py  script_params.py  script_train.py  train.py  utils.py
py_unigram/gemini/: model.py  tokenizer.py  train.py
py_unigram/gemini/tests/: test_gemini_model.py  test_gemini_tokenizer.py  test_gemini_train.py
py_unigram/human/: model.py  train.py
py_unigram/human/tests/: test_model.py
py_unigram/qwen/: model.py  tokenizer.py  train.py
py_unigram/qwen/tests/: test_qwen_model.py  test_qwen_train.py
scripts/: script_params.py  script_train.py
tests/: test_lattice.py  test_model.py  test_tokenizer.py  test_train.py
tests/data/: swift_clean.txt
