
[project]
name = "py_unigram"
version = "0.1.0"
description = "Python implementations of UnigramLM"
readme = "README.md"
authors = [
    { name = "Sander Land" },
]
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.15.0",
    "numpy>=2.2.6",
    "pyqt6>=6.9.1",
    "regex>=2024.11.6",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"
select = ["E", "F", "B", "I", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
