
[project]
name = "py_unigram"
version = "0.1.0"
description = "Python implementations of UnigramLM"
readme = "README.md"
authors = [
    { name = "Sander Land" },
]
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.15.0",
    "numpy>=2.2.6",
    "pyqt6>=6.9.1",
    "regex>=2024.11.6",
    "scipy>=1.15.3",
    "sentencepiece>=0.2.0",
    "tabulate>=0.9.0",
    "tokenizers>=0.21.4",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
development = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 200
target-version = "py311"
select = ["E", "F", "B", "I", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
