
[project]
name = "py_unigram"
version = "0.1.0"
description = "Python implementations of UnigramLM"
readme = "README.md"
authors = [
    { name = "Sander Land" },
]
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.15.0",
    "numpy>=2.2.6",
    "pyqt6>=6.9.1",
    "regex>=2024.11.6",
    "scipy>=1.15.3",
    "sentencepiece>=0.2.0",
    "tabulate>=0.9.0",
    "tokenizers>=0.21.4",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=4.0.0",
    "ruff>=0.12.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
